Fix start staking extra large button on mobile screens

--- a/src/app/styles/Button.module.css
+++ b/src/app/styles/Button.module.css
@@ -484,3 +484,16 @@
     --_button-section-margin-left: rem(6.4px);
   }
 }
+
+@media screen and (max-width: 1200px) {
+  .root {
+    &[data-size="extra-large"] {
+      padding: 0;
+      font-size: 18px;
+      font-weight: 700;
+      line-height: 21.6px;
+      height: 92px;
+      width: 339px;
+    }
+  }
+}
